# drc-2024

./: .gitignore  .rustfmt.toml  README.md  build-all.sh  old_plan.md  plan.md
arrow/: arrow_model.ipynb
client/: Cargo.toml  build.rs  client.py  mask.py  package-lock.json  package.json
client/src/: colours.rs  comms.rs  components.rs  index.html  main.rs
micro/: CMakeLists.txt
micro-py/: client.py  main.py  requirements.txt
micro/src/: base_driver.h  main.cpp  path_driver.cpp
micro/src/control/: motor.cpp  motor.h  steer.cpp  steer.h
micro/src/sensors/: encoder.cpp  encoder.h  imu.cpp  imu.h  odom.h
planner/: Cargo.toml  build.rs  clean.sh  config.json  record.py  replay.py
planner/src/: IDriver.rs  NetworkDriver.rs  SerialDriver.rs  arrow.rs  camera.rs  comms.rs  config.rs  display.rs  driver.rs  follower.rs  logging.rs  main.rs  obstacle.rs  odom.rs  planner.rs  points.rs  pruner.rs  state.rs  vision.rs
planner/src/vision/: arrow.rs  lines.rs  mock.rs  obstacle.rs  perspective.rs
planner/tests/: geometry_test.rs
scripts/: Arrow classifcation.ipynb  line_test.py  mask.py  record.py  requirements.txt  thresh_test.py
shared/: build_proto.sh
shared/messages/: command.proto  diagnostic.proto  odometry.proto  path.proto
