[package]
name = "planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.88.8"
rppal = "0.17.1"
prost = "0.12"
rand = { version="0.8.5", features=["small_rng"] }
puffin = "0.19.0"
puffin_http = "0.16.0"
time = { version="0.3.34", features=["local-offset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
puffin_viewer = "0.20.0"
